--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,36 @@
 group 'KMS'
-version '1.0-SNAPSHOT'
+version '0.0.1-SNAPSHOT'
 
 buildscript {
     ext.kotlin_version = '1.0.6'
+    ext.spring_boot_version = '1.4.3.RELEASE'
 
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version"
+
+        // because of https://discuss.gradle.org/t/bug-in-gradle-2-14-rc1-no-service-of-type-styledtextoutputfactory/17638
+        // solution: https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/87
+        classpath "io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE"
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'application'
+
+// Application class must locate in the same package hierarchy as controllers.
+// The following can be omitted.
+springBoot {
+    mainClassName = "rest.KmsKt"
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -23,5 +40,6 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.mongodb:mongo-java-driver:3.4.1'
+    compile 'org.springframework.boot:spring-boot-starter-web'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
